--- a/resources/css/admin.css
+++ b/resources/css/admin.css
@@ -10,6 +10,7 @@
     left: 0;
     margin-top: 8rem;
     transition: width 0.5s ease;
+    z-index: 999;
 }
 
 .sidebar--open {
@@ -83,4 +84,35 @@
 }
 
 }
+
+/* ESTILOS MODAL */
+
+.btn-confirmar {
+    background-color: var(--negro);
+    color: white;
+    border: none;
+    padding: 2rem;
+    border-radius: 1rem;
+    font-weight: 600;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-confirmar:hover {
+    background-color: var(--color-secundario);
+  }
+  
+  .btn-cancelar {
+    background-color: #f5f5f5;
+    color: #333;
+    border: 1px solid #d9d9d9;
+    padding: 2rem;
+    border-radius: 6px;
+    font-weight: 500;
+    transition: background-color 0.3s ease;
+  }
+  
+  .btn-cancelar:hover {
+    background-color: #e6e6e6;
+  }
+  
 
