--- a/resources/css/contacto.css
+++ b/resources/css/contacto.css
@@ -64,3 +64,10 @@
     display: flex;
     flex-direction: column;
 }
+
+.icons-contact{
+    display: flex;
+    align-items: center;
+    gap: 2rem;
+    font-size: 2.4rem;
+}
